# PicoTamachibi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asyncman.cpp  asyncman.hpp  context.cpp  context.hpp  disc.pbm  display.cpp  display.hpp  event.cpp  event.hpp  filesystem.cpp  filesystem.hpp  font.c  font.h  framebuffer.cpp  framebuffer.hpp  fs.tar  human_input.cpp  human_input.hpp  icon.cpp  icon.hpp  icon.py  incbin.h  main.cpp  main.py  sdcardtest.py  ssd1306.c  ssd1306.h
KiCad/: Library.bak  Library.kicad_sym  fp-info-cache  picoswitch.kicad_pcb  picoswitch.kicad_prl  picoswitch.kicad_pro  picoswitch.kicad_sch  pinout.kicad_mod  pinout.xcf
KiCad/output/: picoswitch-B_Cu.gbr  picoswitch-B_Mask.gbr  picoswitch-B_Silkscreen.gbr  picoswitch-Edge_Cuts.gbr  picoswitch-F_Cu.gbr  picoswitch-F_Mask.gbr  picoswitch-F_Silkscreen.gbr  picoswitch-NPTH.drl  picoswitch-PTH.drl  picoswitch-job.gbrjob
PCB/chibi_v2/: chibi_v2.kicad_pcb  chibi_v2.kicad_prl  chibi_v2.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/chibi_v2/Library.pretty/: Adafruit_Micro_SD_SPI_or_SDIO_Card_Breakout_Board.kicad_mod  TO92.kicad_mod
PCB/chibi_v2/chibi_2_1/: chibi_v2_1.kicad_pcb  chibi_v2_1.kicad_prl  chibi_v2_1.kicad_pro  chibi_v2_1.kicad_sch  fp-info-cache  ~chibi_v2_1.kicad_pcb.lck
PCB/chibi_v2/chibi_2_1/export/: chibi_v2_1-B_Cu.gbr  chibi_v2_1-B_Mask.gbr  chibi_v2_1-B_Paste.gbr  chibi_v2_1-B_Silkscreen.gbr  chibi_v2_1-Edge_Cuts.gbr  chibi_v2_1-F_Cu.gbr  chibi_v2_1-F_Mask.gbr  chibi_v2_1-F_Paste.gbr  chibi_v2_1-F_Silkscreen.gbr  chibi_v2_1-NPTH.drl  chibi_v2_1-PTH.drl  chibi_v2_1-job.gbrjob
PCB/chibi_v2/output/: chibi_v2-B_Cu.gbr  chibi_v2-B_Mask.gbr  chibi_v2-B_Paste.gbr  chibi_v2-B_Silkscreen.gbr  chibi_v2-Edge_Cuts.gbr  chibi_v2-F_Cu.gbr  chibi_v2-F_Mask.gbr  chibi_v2-F_Paste.gbr  chibi_v2-F_Silkscreen.gbr  chibi_v2-NPTH.drl  chibi_v2-PTH.drl  chibi_v2-job.gbrjob  chibi_v2_1-B_Cu.gbr  chibi_v2_1-B_Mask.gbr  chibi_v2_1-B_Paste.gbr  chibi_v2_1-B_Silkscreen.gbr  chibi_v2_1-Edge_Cuts.gbr  chibi_v2_1-F_Cu.gbr  chibi_v2_1-F_Mask.gbr  chibi_v2_1-F_Paste.gbr  chibi_v2_1-F_Silkscreen.gbr  chibi_v2_1-NPTH.drl  chibi_v2_1-PTH.drl  chibi_v2_1-job.gbrjob
basic-coro/: AwaitableTask.hpp  LICENSE  README.md  SingleEvent.cpp  SingleEvent.hpp
emulator/: emulator.cpp  emulator.h  gpio.c  ssd1306.c
include/emulator/hardware/: i2c.h
include/emulator/pico/: stdlib.h
lib/: sdcard.py
microtar/src/: microtar.c  microtar.h
pcb_tamachibi_1-2/: fp-info-cache  pcb_chibi.kicad_pcb  pcb_chibi.kicad_prl  pcb_chibi.kicad_pro  pcb_chibi.kicad_sch
pcb_tamachibi_1-2/export/v1_2/: pcb_chibi-B_Cu.gbr  pcb_chibi-B_Mask.gbr  pcb_chibi-B_Paste.gbr  pcb_chibi-B_Silkscreen.gbr  pcb_chibi-Edge_Cuts.gbr  pcb_chibi-F_Cu.gbr  pcb_chibi-F_Mask.gbr  pcb_chibi-F_Paste.gbr  pcb_chibi-F_Silkscreen.gbr  pcb_chibi-NPTH.drl  pcb_chibi-PTH.drl  pcb_chibi-job.gbrjob
